# simple-streamable-mcp

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
config/: local_config.json  local_config.yaml  log_config.yaml  server_config.json  server_config.yaml
papers/a2a/: papers_info.json
src/client/: mcp_chatbot.py  mpc_chatbot.py  server_config.json
src/log_management/: config.py  log_management.py
src/server/: mcp_server.py
